tests/fail/elaboration/unification/mismatch/arrow-output-type.snap
stdout = ''
stderr = '''
error: type mismatch, expected: A, got Type
  ┌─ tests/fail/elaboration/unification/mismatch/arrow-output-type.fathom:3:39
  │
3 │ fun (A : Type) -> fun (a : A) -> A -> a
  │                                       ^

'''
